k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nodejs-app-service
  namespace: nodejs-app

spec:
  type: ClusterIP

  selector:
    app: nodejs-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
